[tool.poetry]
name = "atagmqtt"
version = "0.5.0"
description = "AtagOne to MQTT bridge"
authors = ["Ard Kuijpers <ardkuijpers@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
homie4 = "^0.4.0"
paho-mqtt = "^1.6.0"
pydantic-settings = "^2.2.0"
aiohttp = "^3.9.4"
pyatag = "^0.3.7.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
